added playlist,next,previous,handled specific events,as well as optimized error handling